--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.8.0
+bson==0.5.10
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
@@ -28,6 +29,7 @@ pydantic==2.10.5
 pydantic_core==2.27.2
 Pygments==2.19.1
 pymongo==4.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
@@ -37,6 +39,7 @@ safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.13.1
 sentence-transformers==3.3.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
 sympy==1.13.1
