--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^8.17.12",
     "@react-three/postprocessing": "^2.19.0",
