--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@react-three/postprocessing": "^2.19.0",
     "@types/three": "^0.172.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
