--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "leva": "^0.9.35",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "three": "^0.172.0"
