--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-youtube": "^10.1.0",
     "three": "^0.172.0"
   },
   "devDependencies": {
